homepage spacing fix

--- a/step/src/main/webapp/style_profile.css
+++ b/step/src/main/webapp/style_profile.css
@@ -147,6 +147,8 @@ h3 a:hover {
     color: black;
     padding: 30px;
     border: 2px;
+    display: grid;
+    grid-template-columns: 70%; 
 }
 
 .match-item {
@@ -170,8 +172,14 @@ h3 a:hover {
     font-weight: bold;
 }
 
+.item-label {
+  float: left;
+}
+
 .item-info {
-    float: right;
+  float: right;
+  position: absolute;
+  right: 3%;
 }
 
 .user-info {
